--- a/index.html
+++ b/index.html
@@ -11,21 +11,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Varela&family=Viga&display=swap" rel="stylesheet">
     <title>chiangishh</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PX47273XHF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PX47273XHF');
+    </script>
 </head>
 
 <body>
     <nav class="fill">
         <div class="navigation">
             <div id="logo">
-                <img src="@CHIANGISHH.png" alt="logo">
+                <p>
+                    <a href="index.html">
+                        <img src="@CHIANGISHH.png" alt="logo">
+                    </a>
+                </p>
             </div>
             <div id="projects">
                 <p>projects</p>
             </div>
             <div class="dropdown">
-                <p class="dropbtn">about me</p>
+                <div>
+                    <p class="dropbtn">about me</p>
+                </div>
                 <div class="dropdown-content">
-                    <a href="#">@chiangishh</a>
+                    <a href="about.html">@chiangishh</a>
                     <a href="#">@vifitzs</a>
                 </div>
             </div>
@@ -105,7 +119,11 @@
                     <p>projects</p>
                 </div>
                 <div>
-                    <p>about me</p>
+                    <p>
+                        <a href="about.html">
+                            <p>about me</p>
+                        </a>
+                    </p>
                 </div>
                 <div>
                     <img src="@CHIANGISHH.png" alt="">
@@ -132,4 +150,5 @@
     </footer>
 </body>
 <script src="index.js"></script>
+
 </html>
