--- a/about.html
+++ b/about.html
@@ -2,178 +2,171 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about me</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="about.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Varela&family=Viga&display=swap" rel="stylesheet">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PX47273XHF"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>about me</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="about.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Varela&family=Viga&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PX47273XHF"></script>
 </head>
 
 <body>
-    <nav class="fill">
-        <div class="navigation">
-            <div id="logo">
-              <p>
-                <a href="index.html">
-                <img src="@CHIANGISHH.png" alt="logo">
-                </a>
-              </p>
-            </div>
-            <div id="projects">
-                <p>projects</p>
-            </div>
-            <div class="dropdown">
-                <p class="dropbtn">about me</p>
-                <div class="dropdown-content">
-                    <a href="#">@chiangishh</a>
-                    <a href="#">@vifitzs</a>
-                </div>
-            </div>
-            <div id="resume">
-                <p>resume</p>
-            </div>
-            <div id="contact">
-                <p>contact</p>
-            </div>
-        </div>
-    </nav>
-
-    <div class="bd-example">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>UC Irvine</h5>
-                        <p> B.A. Sociology ('20), UX/UI Certificate ('21), M.A.S Criminology, Law and Society ('22)</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="3.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Vivian in 3 Words</h5>
-                        <p>Team Leader, Driven, Organized</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="2.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>On Vivian's free time, she likes to...</h5>
-                        <p>create video and fashion content for family, friends, and viewers</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-
-    <div class="accordion" id="accordionExample">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
-              </button>
-            </h2>
-          </div>
-      
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
-            </h2>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
+  <nav class="fill">
+    <div class="navigation">
+      <div id="logo">
+        <p>
+          <a href="index.html">
+            <img src="@CHIANGISHH.png" alt="logo">
+          </a>
+        </p>
+      </div>
+      <div id="projects">
+        <p>projects</p>
+      </div>
+      <div class="dropdown">
+        <p class="dropbtn">about me</p>
+        <div class="dropdown-content">
+          <a href="about.html">@chiangishh</a>
+          <a href="vitfit.html">@vifitzs</a>
         </div>
       </div>
+      <div id="resume">
+        <a href="resume.html">
+          <p>resume</p>
+        </a>
+      </div>
+      <div id="contact">
+        <a href="contact.html">
+          <p>contact</p>
+        </a>
+      </div>
+    </div>
+  </nav>
 
-    <footer>
+  <div class="bd-example">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="uci.png" class="d-block w-100" alt="...">
+          <!-- <div class="carousel-caption d-none d-md-block">
+                        <h5>UC Irvine</h5>
+                        <p> B.A. Sociology ('20), UX/UI Certificate ('21), M.A.S Criminology, Law and Society ('22)</p>
+                    </div> -->
+        </div>
+        <div class="carousel-item">
+          <img src="family & friends.png" class="d-block w-100" alt="...">
+          <!-- <div class="carousel-caption d-none d-md-block">
+                        <h5>Vivian in 3 Words</h5>
+                        <p>Team Leader, Driven, Organized</p>
+                    </div> -->
+        </div>
+        <div class="carousel-item">
+          <img src="fashion.png" class="d-block w-100" alt="...">
+          <!-- <div class="carousel-caption d-none d-md-block">
+                        <h5>On Vivian's free time, she likes to...</h5>
+                        <p>create video and fashion content for family, friends, and viewers</p>
+                    </div> -->
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <div class="aboutName">
+    <h1> ABOUT ME 👋 </h1>
+    <div>
+      <h5>你好, Hi there – I’m Vivian Chiang, a UX/UI Designer and UCI graduate student studying Criminology, Law and
+        Society. </h5>
+    </div>
+    <div>
+      <h5> I was born and raised in sunny Los Angeles, California! Growing up in a non-Asian community has definitely
+        taught me how to protect and put myself first. Rather feeling intimidated by societal stereotypes, I decided to
+        adapt a positive and optimistic mindset/outlook!</h5>
+    </div>
+    <div>
+      <h5> After graduating from UC Irvine with a B.A. in Sociology, I wanted to spread positivity and hopefully, reduce
+        stereotypes as much as I can as an individual, which lead me to UX/UI. </h5>
+    </div>
+    <div>
+      <h5> As a UX/UI Designer, my goal is to implement encouraging and cheerful designs for users based on their
+        feedback and experience with the product(s). </h5>
+    </div>
+    <div>
+      <h5> I enjoy working in teams to brainstorm and bounce ideas off one another. I want to work in an environment
+        where I can grow and learn while having fun and designing with one another. </h5>
+    </div>
+    <div>
+      <h5> Outside of design, I am a fashion enthusiast. I enjoy expressing myself through my Outfit of the Days
+        (ootds). I love creating content on YouTube and Instagram for my family, friends, and viewers. </h5>
+    </div>
+    <div class="social">
+      <h5>My YouTube <a href="https://www.youtube.com/channel/UCJ--zNk2qe5PiSST5zBFSlg">@chiangishh</a></h5>
+      <h5>Fashion Instagram <a href="https://www.instagram.com/vifitzs/?hl=en">@vifitzs</a></h5>
+    </div>
+  </div>
+
+
+
+  <footer>
+    <div>
+      <div id="footer2">
         <div>
-            <div id="footer2">
-                <div>
-                    <p>projects</p>
-                </div>
-                <div>
-                    <p>about me</p>
-                </div>
-                <div>
-                    <img src="@CHIANGISHH.png" alt="logo">
-                </div>
-                <div>
-                    <p>resume</p>
-                </div>
-                <div>
-                    <p>contact</p>
-                </div>
-            </div>
-            <div id="footer3">
-                <div class="logos">
-                    <img id="github" src="github.svg" alt="github">
-                    <img id="linkedin" src="linkedin.svg" alt="linkedin">
-                    <img id="youtube" src="youtube.svg" alt="youtube">
-                </div>
-            </div>
+          <p>projects</p>
         </div>
-        <div id="footer4">
-            <p>Copyright Vivian Chiang 2021</p>
+        <div>
+          <p>about me</p>
         </div>
+        <div>
+          <img src="@CHIANGISHH.png" alt="logo">
         </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        <div>
+          <p>resume</p>
+        </div>
+        <div>
+          <p>contact</p>
+        </div>
+      </div>
+      <div id="footer3">
+        <div class="logos">
+          <img id="github" src="github.svg" alt="github">
+          <img id="linkedin" src="linkedin.svg" alt="linkedin">
+          <img id="youtube" src="youtube.svg" alt="youtube">
+        </div>
+      </div>
+    </div>
+    <div id="footer4">
+      <p>Copyright Vivian Chiang 2021</p>
+    </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </body>
 <script src="about.js"></script>
