updated home page
portfolio updated home page

--- a/about.html
+++ b/about.html
@@ -104,15 +104,15 @@
     </div>
     <div>
       <h5> After graduating from UC Irvine with a B.A. in Sociology, I wanted to spread positivity and hopefully, reduce
-        stereotypes as much as I can as an individual, which lead me to UX/UI. </h5>
+        stereotypes as much as I can as an individual, which led me to UX/UI. </h5>
     </div>
     <div>
-      <h5> As a UX/UI Designer, my goal is to implement encouraging and cheerful designs for users based on their
+      <h5> As a UX/UI Designer, my goal is to deliver bright and empowering designs for users based on their
         feedback and experience with the product(s). </h5>
     </div>
     <div>
       <h5> I enjoy working in teams to brainstorm and bounce ideas off one another. I want to work in an environment
-        where I can grow and learn while having fun and designing with one another. </h5>
+        where I can grow and learn while having fun and designing. </h5>
     </div>
     <div>
       <h5> Outside of design, I am a fashion enthusiast. I enjoy expressing myself through my Outfit of the Days
