--- a/index.html
+++ b/index.html
@@ -79,15 +79,27 @@
     </section>
 
     <section>
-        <!-- content work -->
         <div class="content">
             <div id="featuredProjects">
                 <h3>FEATURED PROJECTS</h3>
             </div>
-            <div id="thumbNails">
-                <img id="dosBot" src="Untitled design (4).png" alt="DosBot">
-                <h3 id="uxResearcher">UX Researcher</h3>
-                <!-- <img id="ccl" src="MacBook - 1.png" alt="ccl"> -->
+            <div class="thumbNails">
+                <div id="dosBot">
+                    <img id="dosBot" src="dosbot.png" alt="DosBot">
+                    <h3 id="uxResearcher">December 2020 : Robot assistant app</h3>
+                </div>
+                <div id="aapi">
+                    <img src="aapi.png" alt="aapi">
+                    <h3>April 2021 : Social movement app</h3>
+                </div>
+                <div id="DOL">
+                    <img src="dol.png" alt="dol">
+                    <h3>January 2021 : Government website</h3>
+                </div>
+                <div id="ccl">
+                    <img src="ccl.png" alt="ccl">
+                    <h3>February 2021 : Non-profit website</h3>
+                </div>
             </div>
         </div>
     </section>
