--- a/vitfit.html
+++ b/vitfit.html
@@ -28,8 +28,10 @@
                 </p>
             </div>
             <div id="projects">
-                <p>projects</p>
-            </div>
+                <a href="project.html">
+                  <p>projects</p>
+                 </a>
+              </div>
             <div class="dropdown">
                 <p class="dropbtn">about me</p>
                 <div class="dropdown-content">
