--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
         </p>
       </div>
       <div id="projects">
-        <p>projects</p>
+        <a href="project.html">
+          <p>projects</p>
+         </a>
       </div>
       <div class="dropdown">
         <p class="dropbtn">about me</p>
@@ -129,20 +131,32 @@
   <footer>
     <div>
       <div id="footer2">
-        <div>
-          <p>projects</p>
+        <div id="projects">
+          <a href="project.html">
+            <p>projects</p>
+          </a>
         </div>
-        <div>
-          <p>about me</p>
+        <div id="about">
+          <a href="about.html">
+            <p>about me</p>
+          </a>
         </div>
-        <div>
-          <img src="@CHIANGISHH.png" alt="logo">
+        <div id="logo">
+          <p>
+            <a href="index.html">
+              <img src="@CHIANGISHH.png" alt="logo">
+            </a>
+          </p>
         </div>
-        <div>
-          <p>resume</p>
+        <div id="resume">
+          <a href="resume.html">
+            <p>resume</p>
+          </a>
         </div>
-        <div>
-          <p>contact</p>
+        <div id="contact">
+          <a href="contact.html">
+            <p>contact</p>
+          </a>
         </div>
       </div>
       <div id="footer3">
