--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                 </p>
             </div>
             <div id="projects">
-                <p>projects</p>
-            </div>
+                <a href="project.html">
+                  <p>projects</p>
+                 </a>
+              </div>
             <div class="dropdown">
                 <div>
                     <p class="dropbtn">about me</p>
@@ -44,10 +46,14 @@
                 </div>
             </div>
             <div id="resume">
-                <p>resume</p>
+                <a href="resume.html">
+                    <p>resume</p>
+                </a>
             </div>
             <div id="contact">
-                <p>contact</p>
+                <a href="contact.html">
+                    <p>contact</p>
+                </a>
             </div>
         </div>
     </nav>
