--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,9 @@
         </p>
       </div>
       <div id="projects">
-        <p>projects</p>
+        <a href="project.html">
+          <p>projects</p>
+        </a>
       </div>
       <div class="dropdown">
         <p class="dropbtn">about me</p>
@@ -47,9 +49,9 @@
       </div>
     </div>
   </nav>
-<div class="resume">
+  <div class="resume">
     <img src="Screen Shot 2021-04-17 at 11.37.01 PM.png" alt="">
-</div>
+  </div>
 
 
 
@@ -59,20 +61,32 @@
   <footer>
     <div>
       <div id="footer2">
-        <div>
-          <p>projects</p>
+        <div id="projects">
+          <a href="project.html">
+            <p>projects</p>
+          </a>
         </div>
-        <div>
-          <p>about me</p>
+        <div id="about">
+          <a href="about.html">
+            <p>about me</p>
+          </a>
         </div>
-        <div>
-          <img src="@CHIANGISHH.png" alt="logo">
+        <div id="logo">
+          <p>
+            <a href="index.html">
+              <img src="@CHIANGISHH.png" alt="logo">
+            </a>
+          </p>
         </div>
-        <div>
-          <p>resume</p>
+        <div id="resume">
+          <a href="resume.html">
+            <p>resume</p>
+          </a>
         </div>
-        <div>
-          <p>contact</p>
+        <div id="contact">
+          <a href="contact.html">
+            <p>contact</p>
+          </a>
         </div>
       </div>
       <div id="footer3">
