updated home footer
home footer

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
             <div id="projects">
                 <a href="project.html">
-                  <p>projects</p>
-                 </a>
-              </div>
+                    <p>projects</p>
+                </a>
+            </div>
             <div class="dropdown">
                 <div>
                     <p class="dropbtn">about me</p>
@@ -133,37 +133,37 @@
     <footer>
         <div>
             <div id="footer2">
-                <div>
-                    <p>projects</p>
+                <div id="projects">
+                    <a href="project.html">
+                        <p>projects</p>
+                    </a>
                 </div>
-                <div>
+                <div id="about">
+                    <a href="about.html">
+                        <p>about me</p>
+                    </a>
+                </div>
+                <div id="logo">
                     <p>
-                        <a href="about.html">
-                            <p>about me</p>
+                        <a href="index.html">
+                            <img src="@CHIANGISHH.png" alt="logo">
                         </a>
                     </p>
                 </div>
-                <div>
-                    <img src="@CHIANGISHH.png" alt="">
+                <div id="resume">
+                    <a href="resume.html">
+                        <p>resume</p>
+                    </a>
                 </div>
-                <div>
-                    <p>resume</p>
-                </div>
-                <div>
-                    <p>contact</p>
-                </div>
-            </div>
-            <div id="footer3">
-                <div class="logos">
-                    <img id="github" src="github.svg" alt="github">
-                    <img id="linkedin" src="linkedin.svg" alt="linkedin">
-                    <img id="youtube" src="youtube.svg" alt="youtube">
+                <div id="contact">
+                    <a href="contact.html">
+                        <p>contact</p>
+                    </a>
                 </div>
             </div>
-        </div>
-        <div id="footer4">
-            <p>Copyright Vivian Chiang 2021</p>
-        </div>
+            <div id="footer4">
+                <p>Copyright Vivian Chiang 2021</p>
+            </div>
         </div>
     </footer>
 </body>
