contact page updated
added in my contact to portfolio

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>about me</title>
+  <title>contact</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,7 +28,9 @@
         </p>
       </div>
       <div id="projects">
-        <p>projects</p>
+        <a href="project.html">
+          <p>projects</p>
+         </a>
       </div>
       <div class="dropdown">
         <p class="dropbtn">about me</p>
@@ -44,34 +46,59 @@
       </div>
       <div id="contact">
         <a href="contact.html">
-            <p>contact</p>
+          <p>contact</p>
         </a>
-    </div>
+      </div>
     </div>
   </nav>
 
-
-
+<section>
+  <div class="arms">
+    <img src="IMG_8230 2.jpg" alt="vivian">
+    <div class="title">
+      <h1>Let's connect and be friends! 🤠</h1>
+    </div>
+   <div class="heading3"> 
+     <h3>Ways to contact me </h3>
+     <h5>email : vivianchiang99@gmail.com</h5>
+     <h5>youtube : @chiangishh </h5>
+     <h5>instagram: @vifitzs </h5>
+ 
+   </div>
+  </div>
+</section>
 
 
 
   <footer>
     <div>
       <div id="footer2">
-        <div>
-          <p>projects</p>
+        <div id="projects">
+          <a href="project.html">
+            <p>projects</p>
+          </a>
         </div>
-        <div>
-          <p>about me</p>
+        <div id="about">
+          <a href="about.html">
+            <p>about me</p>
+          </a>
         </div>
-        <div>
-          <img src="@CHIANGISHH.png" alt="logo">
+        <div id="logo">
+          <p>
+            <a href="index.html">
+              <img src="@CHIANGISHH.png" alt="logo">
+            </a>
+          </p>
         </div>
-        <div>
-          <p>resume</p>
+        <div id="resume">
+          <a href="resume.html">
+            <p>resume</p>
+          </a>
         </div>
-        <div>
-          <p>contact</p>
+        <div id="contact">
+          <a href="contact.html">
+            <p>contact</p>
+          </a>
         </div>
       </div>
       <div id="footer3">
