--- a/resume.html
+++ b/resume.html
@@ -45,6 +45,7 @@
         </a>
       </div>
       <div id="contact">
+        <a href="contact.html">
         <p>contact</p>
       </div>
     </div>
