--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
     </div>
    <div class="heading3"> 
      <h3>Ways to contact me </h3>
+     <h5>linkedin : https://www.linkedin.com/in/vivianchiang-20/ </h5>
      <h5>email : vivianchiang99@gmail.com</h5>
      <h5>youtube : @chiangishh </h5>
      <h5>instagram: @vifitzs </h5>
