case study pages
updated

--- a/ccl.html
+++ b/ccl.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>stopaapihate</title>
+  <title>ccl</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="project.css">
+  <link rel="stylesheet" href="ccl.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,7 +54,8 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <!-- <h1 class="display-4">Fluid jumbotron</h1> -->
-      <p class="lead">Stop Asian American Pacific Islander Hate and Start Spreading Awareness! </p>
+      <p class="lead">Non-profit organization focusing on (S)cience (T)echnology (E)ngineering (A)rts (M)ath creative
+        activites </p>
     </div>
   </div>
   <div class="overview">
@@ -69,7 +70,7 @@
     </div>
     <div class="team">
       <h3>Team :</h3>
-      <p> Vivian Chiang, Michelle Lee, Amy Truong</p>
+      <p> Vivian Chiang, Gloria Abiter, Michelle Lee</p>
     </div>
     <div class="tools">
       <h3>Tools Used :</h3>
@@ -83,7 +84,8 @@
   <section>
     <div class="problem">
       <h1>- Problem</h1>
-      <p class="paragraph">How might we help AAPI supporters successfully report hate crimes with a fearless approach while spreading
+      <p class="paragraph">How might we help AAPI supporters successfully report hate crimes with a fearless approach
+        while spreading
         awareness and positivity in hopes to create alliances?</p>
 
       <p>We believe that by designing an application focused on promoting optimism, community, and credibility for
@@ -101,13 +103,15 @@
     <h1>- Research </h1>
     <p> We created two proto personas based on the Stop AApi Hate website...</p>
     <div class="jung">
-    <img  src="jung-lie.png" alt="jung-lie">
-    <img src="anna.png" alt="anna">
-  </div>
-  <h5>Surveyed 30+ individuals and interviewed 6 respondents</h5>
-  
+      <img src="jung-lie.png" alt="jung-lie">
+      <img src="anna.png" alt="anna">
+    </div>
+    <h5>Surveyed 30+ individuals and interviewed 6 respondents</h5>
+
   </div>
   <!-- <h3>Pat Smithyou</h3> -->
+
+
 
   <div class="arrows">
     <div class="previous">
@@ -117,9 +121,6 @@
       <a href="ccl.html">Next case study -></a>
     </div>
   </div>
-  <footer>
-    <div>
-</div>
   <footer>
     <div>
       <div id="footer2">
