--- a/ccl.html
+++ b/ccl.html
@@ -70,7 +70,7 @@
     </div>
     <div class="team">
       <h3>Team :</h3>
-      <p> Vivian Chiang, Gloria Abiter, Michelle Lee</p>
+      <p> Vivian Chiang, Gloria Albiter, Michelle Lee</p>
     </div>
     <div class="tools">
       <h3>Tools Used :</h3>
@@ -84,18 +84,13 @@
   <section>
     <div class="problem">
       <h1>- Problem</h1>
-      <p class="paragraph">How might we help AAPI supporters successfully report hate crimes with a fearless approach
-        while spreading
-        awareness and positivity in hopes to create alliances?</p>
+      <p class="paragraph">How might we provide the users with a clear information architecture to find what they need to enrolling their child in workshops or memberships? 
+      </p>
 
-      <p>We believe that by designing an application focused on promoting optimism, community, and credibility for
-        supporters of the AAPI movement, we’ll help reduce AAPI hate crimes and fear for victims.
+      <p>We believe that providing the users a clear layout of information on the activities will help customers understand what they are enrolling their child in and thus increase membership subscriptions.
       </p>
       <p>
-        This will be accomplished through allyships with movements like Black Lives Matter to form a sense of community.
-        Additionally, we’ll promote events, provide visual updates of hate crimes via a map and live feed, and share
-        credible resources that will spread awareness to protect the AAPI community. Finally, we will highlight the
-        progress that has been made to increase positivity and reduce fear.
+        By providing information about the workshops/activities for parents to book for their elementary kids will result in higher at home activity download rates and membership sign ups. 
       </p>
     </div>
   </section>
@@ -115,7 +110,7 @@
 
   <div class="arrows">
     <div class="previous">
-      <a href="ccl.html"> <-Previous case study</a>
+      <a href="project.html"> <-Previous case study</a>
     </div>
     <div class="next">
       <a href="ccl.html">Next case study -></a>
