--- a/project.html
+++ b/project.html
@@ -108,7 +108,9 @@
   
   </div>
   <!-- <h3>Pat Smithyou</h3> -->
-
+<div class="link">
+  <a href="https://docs.google.com/presentation/d/1QznlJeVLLcUMd8kG69BGHhibNAM4icTyVFgqLlhe9ak/edit?usp=sharing">click to view case study here!</a>
+</div>
   <div class="arrows">
     <div class="previous">
       <a href="ccl.html"> <-Previous case study</a>
