only stop aapi app
stop aapi app social movement

--- a/index.html
+++ b/index.html
@@ -89,23 +89,26 @@
             <div id="featuredProjects">
                 <h3>FEATURED PROJECTS</h3>
             </div>
+            <div>
+                <img src="aapi.png" alt="">
+            </div>
             <div class="thumbNails">
-                <div id="dosBot">
+                <!-- <div id="dosBot">
                     <img id="dosBot" src="dosbot.png" alt="DosBot">
                     <h3 id="uxResearcher">December 2020 : Robot assistant app</h3>
-                </div>
-                <div id="aapi">
+                </div> -->
+                <!-- <div id="aapi">
                     <img src="aapi.png" alt="aapi">
                     <h3>April 2021 : Social movement app</h3>
-                </div>
-                <div id="DOL">
+                </div> -->
+                <!-- <div id="DOL">
                     <img src="dol.png" alt="dol">
                     <h3>January 2021 : Government website</h3>
                 </div>
                 <div id="ccl">
                     <img src="ccl.png" alt="ccl">
                     <h3>February 2021 : Non-profit website</h3>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
