--- a/project.html
+++ b/project.html
@@ -81,9 +81,29 @@
     </div>
   </div>
   <section>
+    <div class="background">
+      <h1>- Background</h1>
+      <h5>What is AAPI?</h5>
+      <p class="backgroundParagraph">
+        A.sian A.merican P.acific I.slander
+      </p>
+      <h5>AAPI Hate</h5>
+      <p>SAH reported 3,800 firsthand complaints of racisim & discrimination in the past year</p>
+      <p>Overall, hate crimes decreased by 7% while AAPI Hate Crimes increased by 150%</p>
+      <p>Over 200,000 Asian-owned small businesses in the U.S. closed between February to April 2020.</p>
+      <h5>Why we chose AAPI Hate...</h5>
+      <p>As an Asian American team, we wanted to spread awareness, create positivity, and alliances for our community.
+      </p>
+    </div>
+    <div class="heading4">
+      <h5>Did you know that 233,000 Asian-owned small businesses in the U.S. closed between February to April 2020,
+        including half of the country's Chinese restaurants. Research cited by Restaurant Business Magazine showed
+        "consumer prejudice and misperceptions" as factors. </h5>
+    </div>
     <div class="problem">
       <h1>- Problem</h1>
-      <p class="paragraph">How might we help AAPI supporters successfully report hate crimes with a fearless approach while spreading
+      <p class="paragraph">How might we help AAPI supporters successfully report hate crimes with a fearless approach
+        while spreading
         awareness and positivity in hopes to create alliances?</p>
 
       <p>We believe that by designing an application focused on promoting optimism, community, and credibility for
@@ -99,29 +119,77 @@
   </section>
   <div class="research">
     <h1>- Research </h1>
-    <p> We created two proto personas based on the Stop AApi Hate website...</p>
-    <div class="jung">
-    <img  src="jung-lie.png" alt="jung-lie">
-    <img src="anna.png" alt="anna">
+    <p> To understand user pain points with the social movement, we created a Google form survey and interviewed
+      individuals through Zoom. </p>
+    <img class="graph" src="graph.png" alt="graph">
+    <img class="screen" src="Screen Shot 2021-06-03 at 9.42.58 AM.png" alt="respondents">
+    <img class="screen2" src="Screen Shot 2021-06-03 at 9.27.02 AM.png" alt="participants">
   </div>
-  <h5>Surveyed 30+ individuals and interviewed 6 respondents</h5>
-  
+  <div class="interview">
+    <h1>- Interview Insights</h1>
+    <div class="insight">
+      <img class="ryan" src="Screen Shot 2021-06-03 at 9.54.39 AM.png" alt="ryan">
+      <img class="henry" src="Screen Shot 2021-06-03 at 9.55.38 AM.png" alt="henry">
+      <!-- </div>
+<div class="para"> -->
+      <p class="one">We learned that AAPI supporters feel strongly about recent hate crimes against the community and
+        want to spread awareness and decrease crime.</p>
+      <p class="two">
+        We have found that young supporters feel enraged for the AAPI community, while the older demographics are
+        experiencing fear. We as UX Designers would like to help by creating an application designed to promote optimism
+        while spreading awareness of the grave situation.</p>
+    </div>
   </div>
-  <!-- <h3>Pat Smithyou</h3> -->
-<div class="link">
-  <a href="https://docs.google.com/presentation/d/1QznlJeVLLcUMd8kG69BGHhibNAM4icTyVFgqLlhe9ak/edit?usp=sharing">click to view case study here!</a>
+  <div class="pat">
+    <h1>- User Persona</h1>
+    <div class="pats">
+      <img class="ones" src="Screen Shot 2021-06-04 at 8.05.53 PM.png" alt="persona">
+      <img class="twos" src="Screen Shot 2021-06-04 at 8.11.19 PM.png" alt="paint points">
+    </div>
+  </div>
+<div class="sketch">
+<h1>- Wireframing & Low-fi </h1>
+<p>We began our design process by sketching and creating a low fidelity mockup. These were the initial wireframes used during user testing!</p>
+<img src="lowfi.png" alt="wireframes">
 </div>
-  <div class="arrows">
+<div class="testing">
+  <h1>- Testing</h1>
+  <p>As a group, we decided to focus on one out of the three main features, events. We tested the users' priority in the events feature. We asked the users to give us a walkthrough with the app and to think out loud. The two main questions were...</p>
+  <p>1) Do they care for event recaps?</p>
+  <p>2) Do they prefer dark or light UI and why?</p>
+  <div class="tests">
+  <img class="testin" src="Screen Shot 2021-06-04 at 9.04.02 PM.png" alt="testing">
+  <img class="testinn" src="Screen Shot 2021-06-04 at 9.02.28 PM.png" alt="testing">
+</div>
+</div>
+<div class="iterations">
+  <h1>- Iterations</h1>
+  <img src="Screen Shot 2021-06-04 at 9.09.08 PM.png" alt="iteration">
+  <p>We started off with a dark ui to match the website, however after user testing different color palettes, we decided with lighter UI. It aligned better with the positive and empowering theme. The new color palette was more empowering where it represented flesh tone. 
+    We also added brush strokes to multiple elements in our UI to create a sense of urgency to represent the importance of taking immediate action. 
+    </p>
+</div>
+<div class="final">
+  <h1>- Final Prototype</h1>
+  <img src="prototype.gif" alt="prototype">
+</div>
+
+
+
+
+
+
+
+  <!-- <div class="arrows">
     <div class="previous">
-      <a href="ccl.html"> <-Previous case study</a>
+      <a href="ccl.html">
+        <-Previous case study</a>
     </div>
     <div class="next">
       <a href="ccl.html">Next case study -></a>
     </div>
   </div>
-  <footer>
-    <div>
-</div>
+  </div> -->
   <footer>
     <div>
       <div id="footer2">
