--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
     </div>
   </nav>
   <div class="resume">
-    <img src="Screen Shot 2021-04-17 at 11.37.01 PM.png" alt="">
+    <img src="VIVIAN CHIANG_Resume 2023.pdf" alt="Vivian_Resume">
   </div>
 
 
