update pdf resume 2023
added pdf resume 2023

--- a/resume.html
+++ b/resume.html
@@ -44,14 +44,16 @@
           <p>resume</p>
         </a>
       </div>
-      <div id="contact">
+      <!-- <div id="contact">
         <a href="contact.html">
         <p>contact</p>
-      </div>
+      </div> -->
     </div>
   </nav>
   <div class="resume">
-    <img src="VIVIAN CHIANG_Resume 2023.pdf" alt="Vivian_Resume">
+    <iframe src="VIVIAN CHIANG_Resume 2023.pdf#toolbar=0" width="100%" height="1000px">
+    </iframe>
+  </body>
   </div>
 
 
